# maive-ui

./: .env.dev  .env.prod  .gitignore  .gitmodules  .gitmodules.save  AGENTS.md  CLAUDE.md  Dockerfile-flask  Dockerfile-r  Dockerfile-react  README-dev.md  README.md  docker-compose.yml  newButton.ts  package-lock.json  package.R  package.json  setup.py  test_funnel_plot_with_maive.R
.claude/: settings.json
Flask/: app.py  setup.py
Flask-app/: app.py  setup.py
R/: Dockerfile
React/: Dockerfile
apps/flask-api/: Dockerfile  README.md  app.py  pyproject.toml  setup.py
apps/flask-api/app/: config.py
apps/flask-api/app/aws/: s3.py
apps/flask-api/app/blueprints/: run_model.py  upload.py  validate.py
apps/flask-api/app/blueprints/home/: __init__.py
apps/flask-api/app/blueprints/home/routes/: home_route.py
apps/flask-api/app/blueprints/r_api/routes/: call_echo.py
apps/flask-api/app/blueprints/scripts/routes/: create.py  edit.py  script_route.py
apps/flask-api/app/docs/: swagger_config.py
apps/flask-api/scripts/: lint.sh
artma/: package-lock.json  package.json
client/: package-lock.json  package.json
debug/: activism.csv  activism.xlsx  activism_prepared.csv
docs/: API_ARCHITECTURE.md  ASYNC_RUNS_DESIGN.md  COST_CONTROLS.md  COST_OPTIMIZATION.md  PUBLIC_API.md  PUBLIC_API_DESIGN.md  QUARTERLY_RELEASES.md  SERVER_SIDE_API_ARCHITECTURE.md  UPDATING_MAIVE_VERSION.md  maive-bootstrap-ci-prompt.md  unstable-release-banner.md
lambda-r-backend/: .dockerignore  Dockerfile  Dockerfile.lambda  Dockerfile.rlib  README.md  build.sh  index.R  maive_model.R  (+2 more)
(+443 files in other folders)
