[tool.poetry]
name = "maive"
version = "0.0.7-8"
description = "Automatic Replication Tools for Meta-Analysis"
authors = ["Petr Cala <cala.p@seznam.cz>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
flask = ">=3.0.0"
podman-compose = ">=1.0.6"
requests = ">=2.31.0"

[tool.poetry.group.docs.dependencies]
sphinx = ">=4.0.0"
sphinx-rtd-theme = ">=1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
