[tool.poetry]
name = "maive"
version = "0.0.7-12"
description = "Automatic Replication Tools for Meta-Analysis"
authors = ["Petr Cala <cala.p@seznam.cz>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
flask = ">=3.0.0"
podman-compose = ">=1.0.6"
requests = ">=2.31.0"
flasgger = "^0.9.7.1"
boto3 = "^1.38.29"
werkzeug = "^3.1.3"
pandas = "^2.3.0"
redis = "^6.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[tool.poetry.group.docs.dependencies]
sphinx = ">=4.0.0"
sphinx-rtd-theme = ">=1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
